// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots prenda-spark/Input Large Input 1`] = `
Array [
  <label
    className="MuiFormLabel-root MuiInputLabel-root WithStyles(ForwardRef(InputLabel))-root-7 MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
  >
    Input Label
  </label>,
  <div
    className="MuiFormControl-root MuiTextField-root makeStyles-textarea-5"
  >
    <div
      className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl MuiInputBase-multiline MuiInput-multiline"
      onClick={[Function]}
    >
      <textarea
        aria-invalid={false}
        autoFocus={true}
        className="MuiInputBase-input MuiInput-input makeStyles-textAreaResize-6 MuiInputBase-inputMultiline MuiInput-inputMultiline"
        disabled={false}
        id="inputId"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        rows={6}
        value=""
      />
    </div>
  </div>,
  <p
    className="MuiFormHelperText-root WithStyles(ForwardRef(FormHelperText))-root-8"
  >
    Optional Message
  </p>,
]
`;

exports[`Storyshots prenda-spark/Input Small Input 1`] = `
Array [
  <label
    className="MuiFormLabel-root MuiInputLabel-root WithStyles(ForwardRef(InputLabel))-root-3 MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
  >
    Input Label
  </label>,
  <div
    className="MuiFormControl-root MuiTextField-root makeStyles-textarea-1"
  >
    <div
      className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={true}
        className="MuiInputBase-input MuiInput-input makeStyles-textAreaResize-2"
        disabled={false}
        id="inputId"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>,
  <p
    className="MuiFormHelperText-root WithStyles(ForwardRef(FormHelperText))-root-4"
  >
    Optional Message
  </p>,
]
`;

exports[`Storyshots prenda-spark/Input Small Input Error 1`] = `
Array [
  <label
    className="MuiFormLabel-root MuiInputLabel-root WithStyles(ForwardRef(InputLabel))-root-11 MuiInputLabel-animated MuiInputLabel-shrink"
    data-shrink={true}
  >
    Input Label
  </label>,
  <div
    className="MuiFormControl-root MuiTextField-root makeStyles-textarea-9"
  >
    <div
      className="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoFocus={true}
        className="MuiInputBase-input MuiInput-input makeStyles-textAreaResize-10"
        disabled={false}
        id="inputId"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>,
  <p
    className="MuiFormHelperText-root WithStyles(ForwardRef(FormHelperText))-root-12"
  >
    Optional Message
  </p>,
]
`;
